--- a/src/main/webapp/WEB-INF/zUIC/left.html
+++ b/src/main/webapp/WEB-INF/zUIC/left.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script language="JavaScript" src="js/jquery.js"></script>
+<link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
+<script language="JavaScript" src="${res}/js/jquery-1.11.1.js"></script>
 
 <script type="text/javascript">
 $(function(){	
