--- a/src/main/webapp/WEB-INF/zUIC/index.html
+++ b/src/main/webapp/WEB-INF/zUIC/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery.js"></script>
+<link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="${res}/js/jquery.js"></script>
 
 </head>
 
