--- a/src/main/webapp/WEB-INF/zUIC/left.html
+++ b/src/main/webapp/WEB-INF/zUIC/left.html
@@ -30,10 +30,10 @@ $(function(){
 </head>
 
 <body style="background:#f0f9fd;">
-	<div class="lefttop"><span></span>通讯录</div>
+	<!--<div class="lefttop"><span></span>通讯录</div>-->
     
     <dl class="leftmenu">
-        
+
     <dd>
     <div class="title">
     <span><img src="images/leftico01.png" /></span>管理信息
