添加tree-left-Menu

--- a/src/main/webapp/WEB-INF/zUIC/leftTree.html
+++ b/src/main/webapp/WEB-INF/zUIC/leftTree.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html  style="height: 100%" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>无标题文档</title>
+    <link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
     <link href="${res}/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
     <script language="JavaScript" src="${res}/js/jquery-1.11.1.js"></script>
     <script language="JavaScript" src="${res}/js/jquery.ztree.core-3.5.min.js"></script>
 </head>
-<body style="background:#f0f9fd;">
-<div style="height: 400px;border-bottom: 2px solid #00a4ac;width: 100%">
+<body style="background:#f0f9fd;height:100%">
+<div class="leftTreeDiv">
+    <div class="lefttop"><span></span>树结构显示</div>
     <ul id="treeDemo" class="ztree"></ul>
 </div>
 
