--- a/src/main/webapp/WEB-INF/zUIC/top.html
+++ b/src/main/webapp/WEB-INF/zUIC/top.html
@@ -42,8 +42,8 @@
 
 <div id="sub-menu" class="sub-menu">
     <ul>
-        <li class="selected"><a href="#">开始页</a></li>
-        <li><a href="tree-left.html" target="leftFrame">树结构</a></li>
+        <li class="selected"><a  href="left.html" target="leftFrame">开始页</a></li>
+        <li><a href="leftTree.html" target="leftFrame">树结构</a></li>
         <!--<li><a href="#">XXX管理</a></li>-->
     </ul>
 </div>
