--- a/src/main/webapp/WEB-INF/zUIC/left.html
+++ b/src/main/webapp/WEB-INF/zUIC/left.html
@@ -36,11 +36,12 @@ $(function(){
 
     <dd>
     <div class="title">
-    <span><img src="images/leftico01.png" /></span>管理信息
+    <span><img src="images/leftico01.png" /></span>模板展示
     </div>
     	<ul class="menuson">
         <li><cite></cite><a href="index.html" target="rightFrame">首页模版</a><i></i></li>
-        <li class="active"><cite></cite><a href="right.html" target="rightFrame">数据列表</a><i></i></li>
+        <li class="active"><cite></cite><a href="right.html" target="rightFrame">基本数据列表</a><i></i></li>
+        <li><cite></cite><a href="right.html" target="rightFrame">dataTable数据</a><i></i></li>
         <li><cite></cite><a href="imgtable.html" target="rightFrame">图片数据表</a><i></i></li>
         <li><cite></cite><a href="form.html" target="rightFrame">添加编辑</a><i></i></li>
         <li><cite></cite><a href="imglist.html" target="rightFrame">图片列表</a><i></i></li>
