--- a/src/main/webapp/WEB-INF/zUIC/right.html
+++ b/src/main/webapp/WEB-INF/zUIC/right.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
-<script type="${res}/text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="${res}/js/jquery-1.11.1.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){
@@ -47,7 +47,7 @@ $(document).ready(function(){
     <div class="tools">
     
     	<ul class="toolbar">
-        <li class="click"><span><img src="${res}/images/t01.png" /></span>添加</li>
+            <li class="click"><span><img src="${res}/images/t01.png" /></span>添加</li>
         <li class="click"><span><img src="${res}/images/t02.png" /></span>修改</li>
         <li><span><img src="${res}/images/t03.png" /></span>删除</li>
         <li><span><img src="${res}/images/t04.png" /></span>统计</li>
