--- a/src/main/webapp/WEB-INF/zUIC/login.html
+++ b/src/main/webapp/WEB-INF/zUIC/login.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>欢迎登录后台管理系统</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script language="JavaScript" src="js/jquery.js"></script>
-<script src="js/cloud.js" type="text/javascript"></script>
+<link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
+<script language="JavaScript" src="${res}/js/jquery.js"></script>
+<script src="${res}/js/cloud.js" type="text/javascript"></script>
 
 <script language="javascript">
 	$(function(){
