--- a/src/main/webapp/WEB-INF/zUIC/tab.html
+++ b/src/main/webapp/WEB-INF/zUIC/tab.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<link href="css/select.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/jquery.idTabs.min.js"></script>
-<script type="text/javascript" src="js/select-ui.min.js"></script>
-<script type="text/javascript" src="editor/kindeditor.js"></script>
+<link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
+<link href="${res}/css/select.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="${res}/js/jquery.js"></script>
+<script type="text/javascript" src="${res}/js/jquery.idTabs.min.js"></script>
+<script type="text/javascript" src="${res}/js/select-ui.min.js"></script>
+<script type="text/javascript" src="${res}/editor/kindeditor.js"></script>
 
 <script type="text/javascript">
     KE.show({
@@ -177,7 +177,7 @@ $(document).ready(function(e) {
     	<thead>
     	<tr>
         <th><input name="" type="checkbox" value="" checked="checked"/></th>
-        <th>编号<i class="sort"><img src="images/px.gif" /></i></th>
+        <th>编号<i class="sort"><img src="${res}/images/px.gif" /></i></th>
         <th>标题</th>
         <th>用户</th>
         <th>籍贯</th>
