调完了dataTable的样式和表单样式 下一步。调整表单验证

--- a/src/main/webapp/WEB-INF/zUIC/dtTable.html
+++ b/src/main/webapp/WEB-INF/zUIC/dtTable.html
@@ -504,7 +504,7 @@
                 lengthChange: false,//用户可不可以自己修改显示的条数
                 lengthMenu : [10],//每页显示多少条
                 pagingType: "full",//分页工具条形式。simple:上条+下条 simple_numbers:上条+数字+下条 full:首页+上条+下条+末页 full_numbers:以上全部
-                dom: 'tip',
+                dom: 't<"dtInfo"pi>',
 
                 language : {
                     processing:   "载入数据...",
@@ -531,8 +531,7 @@
                         "sortAscending":  ": 以升序排列此列",
                         "sortDescending": ": 以降序排列此列"
                     }
-                },
-
+                }
             });
         });
 
