--- a/src/main/webapp/WEB-INF/zUIC/left.html
+++ b/src/main/webapp/WEB-INF/zUIC/left.html
@@ -44,7 +44,7 @@ $(function(){
         <li><cite></cite><a href="dtTable.html" target="rightFrame">dataTable数据</a><i></i></li>
         <li><cite></cite><a href="imgtable.html" target="rightFrame">图片数据表</a><i></i></li>
         <li><cite></cite><a href="form.html" target="rightFrame">表单</a><i></i></li>
-        <li><cite></cite><a href="formWirhValidator.html" target="rightFrame">表单+验证</a><i></i></li>
+        <li><cite></cite><a href="fullForm.html" target="rightFrame">表单+验证</a><i></i></li>
         <li><cite></cite><a href="imglist.html" target="rightFrame">图片列表</a><i></i></li>
         <li><cite></cite><a href="imglist1.html" target="rightFrame">自定义</a><i></i></li>
         <li><cite></cite><a href="tools.html" target="rightFrame">常用工具</a><i></i></li>
