--- a/src/main/webapp/WEB-INF/zUIC/fullForm.html
+++ b/src/main/webapp/WEB-INF/zUIC/fullForm.html
@@ -13,33 +13,9 @@
 
 <body>
 
-<div class="place">
-    <span>位置：</span>
-    <ul class="placeul">
-        <li><a href="#">首页</a></li>
-        <li><a href="#">表单</a></li>
-    </ul>
-</div>
+<div class="formbody form-horizontal">
 
-<!--
-<div class="formbody">
-
-    <div class="formtitle"><span>基本信息</span></div>
-
-    <ul class="forminfo">
-        <li><label>文章标题</label><input name="" type="text" class="dfinput" /><i>标题不能超过30个字符</i></li>
-        <li><label>关键字</label><input name="" type="text" class="dfinput" /><i>多个关键字用,隔开</i></li>
-        <li><label>是否审核</label><cite><input name="" type="radio" value="" checked="checked" />是&nbsp;&nbsp;&nbsp;&nbsp;<input name="" type="radio" value="" />否</cite></li>
-        <li><label>引用地址</label><input name="" type="text" class="dfinput" value="http://www.uimaker.com/uimakerhtml/uidesign/" /></li>
-        <li><label>文章内容</label><textarea name="" cols="" rows="" class="textinput"></textarea></li>
-        <li><label>&nbsp;</label><input name="" type="button" class="btn" value="确认保存"/></li>
-    </ul>
-
-</div>
--->
-<div class="form-horizontal">
-
-
+<div class="formtitle"><span>bootstrap更改的表单+验证</span></div>
 
 
 <form id="testForm" action="login" method="POST">
@@ -112,6 +88,7 @@
         </div>
     </div>
 
+    <div class="formtitle"><span>分隔线</span></div>
     <div class="form-group clearfix w4">
         <label class="control-label">单选框</label>
 
@@ -140,7 +117,13 @@
         </select>
     </div>
 
+    <div class="form-group clearfix w4">
+        <label class="control-label">文本域</label>
+        <textarea class="form-control" rows="3"></textarea>
+    </div>
+
     <!--================button==============-->
+    <div style="margin:10px 20px">
     <!-- Standard button -->
     <button type="button" class="bbtn btn-default">（默认样式）Default</button>
 
