--- a/src/main/webapp/WEB-INF/zUIC/fullForm.html
+++ b/src/main/webapp/WEB-INF/zUIC/fullForm.html
@@ -13,12 +13,12 @@
 
 <body>
 
-<div class="formbody form-horizontal">
+<div class="formbody">
 
 <div class="formtitle"><span>bootstrap更改的表单+验证</span></div>
 
 
-<form id="testForm" action="login" method="POST">
+<form id="testForm" class="form-horizontal" action="login" method="POST">
 
     <div class="form-group w2">
         <label class="control-label">用户名</label>
