--- a/src/main/webapp/WEB-INF/zUIC/tab.html
+++ b/src/main/webapp/WEB-INF/zUIC/tab.html
@@ -20,35 +20,12 @@
 <div id="tabs">
     <ul>
         <li><a href="#tabs-1">发布通知</a></li>
-        <li><a href="#tabs-2">自定义</a></li>
-        <li><a href="#tabs-3">Aenean lacinia</a></li>
+        <li><a href="fullForm.html">自定义</a></li>
+        <li><a href="dtTable.html">Aenean lacinia</a></li>
     </ul>
     <div id="tabs-1">
         <P>欢迎您试用信息发布功能</P>
     </div>
-    <div id="tabs-2">
-        <div class="vocation">
-            <select class="select1">
-                <option>UI设计师</option>
-                <option>交互设计师</option>
-                <option>前端设计师</option>
-                <option>网页设计师</option>
-                <option>Flash动画</option>
-                <option>视觉设计师</option>
-                <option>插画设计师</option>
-                <option>美工</option>
-                <option>其他</option>
-            </select>
-        </div>
-    </div>
-    <div id="tabs-3">
-        <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-        <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
-    </div>
-</div>
-
-<div class="demo-description">
-    <p>Click tabs to swap between content that is broken into logical sections.</p>
 </div>
 
  
