--- a/src/main/webapp/WEB-INF/zUIC/childWindow.html
+++ b/src/main/webapp/WEB-INF/zUIC/childWindow.html
@@ -4,9 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>无标题文档</title>
     <link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
-    <!--    <link href="${res}/../plugins/JqUI-1.10.4/css/jquery.ui.core.css" rel="stylesheet" type="text/css" />
-
-        <link href="${res}/../plugins/JqUI-1.10.4/css/jquery.ui.tabs.css" rel="stylesheet" type="text/css" />-->
     <script language="JavaScript" src="${res}/js/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="${res}/../plugins/JqUI-1.10.4/js/jquery.ui.core.js"></script>
     <script type="text/javascript" src="${res}/../plugins/JqUI-1.10.4/js/jquery.ui.widget.js"></script>
@@ -14,47 +11,23 @@
 
 </head>
 <body>
-
-<div class="formbody">
-    <div class="formtitle"><span>弹出查询框</span></div>
-    <div class="childWindowBody">
-        <form  id="testForm" class="form-inline" action="login" method="POST">
-            <div class="form-group col31">
-                <label class="control-label">用户名</label>
-                <input name="username" id="username" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-
-            <div class="form-group col31">
-                <label class="control-label">文章标题</label>
-                <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-
-            <div class="form-group col31">
-                <label class="control-label">文章标题</label>
-                <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-
-            <div class="form-group col31">
-                <label class="control-label">文章标题</label>
-                <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-
-            <div class="form-group col31">
-                <label class="control-label">文章标题</label>
-                <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-
-            <div class="form-group col31">
-                <label class="control-label">文章标题</label>
-                <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-            </div>
-        </form>
-    </div>
-
-
-
-
+<div id="tabs">
+    <ul>
+        <li><a href="search.html">查询+列表</a></li>
+        <li><a href="fullForm.html">纵向表单</a></li>
+        <li><a href="formDetail.html">详细信息</a></li>
+    </ul>
 </div>
+
+
+<script type="text/javascript">
+    $(function() {
+        $( "#tabs" ).tabs();
+    });
+</script>
+
+
+
 
 
 </body>
