--- a/src/main/webapp/WEB-INF/zUIC/left.html
+++ b/src/main/webapp/WEB-INF/zUIC/left.html
@@ -50,7 +50,7 @@
             <li><cite></cite><a href="fullForm.html" target="rightFrame">表单+验证</a><i></i></li>
             <li><cite></cite><a href="tab.html" target="rightFrame">Tab页</a><i></i></li>
             <li><cite></cite><a href="tabWithEditor.html" target="rightFrame">原-Tab页+Editor</a><i></i></li>
-            <li><cite></cite><a href="childWindow.html" target="_blank">弹出子窗口</a><i></i></li>
+            <li><cite></cite><a href="childWindow.html" target="view_window">弹出子窗口</a><i></i></li>
 
             <li><cite></cite><a href="imglist1.html" target="rightFrame">自定义</a><i></i></li>
             <li><cite></cite><a href="tools.html" target="rightFrame">常用工具</a><i></i></li>
