--- a/src/main/webapp/WEB-INF/zUIC/formDetail.html
+++ b/src/main/webapp/WEB-INF/zUIC/formDetail.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<div class="formbody">
-    <div class="formtitle"><span>人员信息-张三</span></div>
-    <div class="childWindowBody">
+<div class="zWinBody">
+    <div class="zWinTitle"><span>人员信息-张三</span></div>
+    <div class="zWinPanel">
         <form  id="testForm" class="form-inline" action="login" method="POST">
             <table class="bstable">
                 <tr>
@@ -39,110 +39,19 @@
                             <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
                         </div>
                     </td>
-                    <td>
+                    <td colspan="2">
                         <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
+                            <label class="control-label">中长文本-描述</label>
                             <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td colspan="2">
                         <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                            <label class="control-label">文章标题</label>
-                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
+                            <label class="control-label">中长文本-描述</label>
+                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" readonly
+                                    value=" tplink流量控制是每个和别人共用局域网的必备技能。很多单位的领导也为了避免员工上班看视频等娱乐活动过分占用网速"/>
                         </div>
                     </td>
                     <td>
@@ -154,12 +63,48 @@
                 </tr>
                 <tr>
                     <td colspan="3">
+                        <div class="form-group">
+                            <label class="control-label">长文本</label>
+                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名" />
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <div class="form-group">
+                            <label class="control-label">长文本</label>
+                            <input name="textTitle" id="textTitle" type="text" class="form-control"  placeholder="用户名"  readonly
+                                    value="tplink流量控制是每个和别人共用局域网的必备技能。很多单位的领导也为了避免员工上班看视频等娱乐活动过分占用网速"/>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <div class="form-group">
+                            <label class="control-label">textArea</label>
+                            <textarea name="textTitle" id="textTitle" class="form-control"  placeholder="用户名" />
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <div class="form-group">
+                            <label class="control-label">textArea</label>
+                            <textarea name="textTitle" id="textTitle2" class="form-control"  placeholder="用户名" readonly rows="3">
+                                暗室逢灯玩儿阿斯蒂芬双方都共犯好
+                            </textarea>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
                         <div class="sc-btn-group">
                             <button type="button" class="bbtn sc-btn btn-primary">查询</button>
                             <button type="button" class="bbtn sc-btn btn-default">重置</button>
                         </div>
                     </td>
                 </tr>
+
             </table>
 
         </form>
