--- a/src/main/webapp/WEB-INF/zUIC/fullForm.html
+++ b/src/main/webapp/WEB-INF/zUIC/fullForm.html
@@ -13,9 +13,9 @@
 
 <body>
 
-<div class="formbody">
+<div class="zWinBody">
 
-<div class="formtitle"><span>bootstrap更改的表单+验证</span></div>
+<div class="zWinTitle"><span>bootstrap更改的表单+验证</span></div>
 
 
 <form id="testForm" class="form-horizontal" action="login" method="POST">
