--- a/src/main/webapp/WEB-INF/zUIC/search.html
+++ b/src/main/webapp/WEB-INF/zUIC/search.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<div class="formbody">
-    <div class="formtitle"><span>弹出查询框</span></div>
-    <div class="childWindowBody">
+<div class="zWinBody">
+    <div class="zWinTitle"><span>弹出查询框</span></div>
+    <div class="zWinPanel">
         <form  id="testForm" class="form-inline" action="login" method="POST">
             <table class="bstable">
                 <tr>
