--- a/src/main/webapp/WEB-INF/zUIC/childWindow.html
+++ b/src/main/webapp/WEB-INF/zUIC/childWindow.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>无标题文档</title>
+    <title>弹窗演示</title>
     <link href="${res}/css/style.css" rel="stylesheet" type="text/css" />
     <script language="JavaScript" src="${res}/js/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="${res}/../plugins/JqUI-1.10.4/js/jquery.ui.core.js"></script>
