--- a/src/main/webapp/WEB-INF/zUIC/top.html
+++ b/src/main/webapp/WEB-INF/zUIC/top.html
@@ -12,7 +12,7 @@
 <div class="top-menu">
 
     <div class="topleft">
-        <a href="main.html" target="_parent"><img src="images/logo.png" title="系统首页"/></a>
+        <a href="main.html" target="_parent"><img src="${res}/images/main-logo.png" title="系统首页"/></a>
     </div>
 
     <ul id="top-menu" class="nav">
